apps/project/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-backend-dep
  namespace: todo-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-backend
  template:
    metadata:
      labels:
        app: todo-backend
    spec:
      containers:
        - name: todo-backend
          image: PROJECT/IMAGE
          readinessProbe:
            initialDelaySeconds: 10 
            periodSeconds: 5
            httpGet:
               path: /healthz
               port: 8080
          livenessProbe:
            initialDelaySeconds: 20
            periodSeconds: 5
            httpGet:
               path: /healthz
               port: 8080
          resources:
            limits:
              cpu: "150m"
              memory: "100Mi"
