apps/project/manifests/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: todo-backend-dep
  namespace: todo-namespace
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todo-backend
  strategy:
    canary:
      steps:
      - setWeight: 50
      - analysis:
          templates:
            - templateName: cpu-usage-rate
  template:
    metadata:
      labels:
        app: todo-backend
    spec:
      containers:
        - name: todo-backend
          image: PROJECT/IMAGE
          readinessProbe:
            initialDelaySeconds: 10 
            periodSeconds: 5
            httpGet:
               path: /healthz
               port: 8080
          livenessProbe:
            initialDelaySeconds: 20
            periodSeconds: 5
            httpGet:
               path: /healthz
               port: 8080
          resources:
            limits:
              cpu: "150m"
              memory: "100Mi"
